--- a/view/tpv_caja.html
+++ b/view/tpv_caja.html
@@ -167,6 +167,7 @@
                      <th width="145">Caracteres por linea</th>
                      <th>Comando corte</th>
                      <th>Comando apertura</th>
+                     <th>Comando logo</th>
                      <th width="90">nº tickets</th>
                      <th></th>
                      <th class="text-right" width="120">Acciones</th>
@@ -215,6 +216,7 @@
                         </label>
                      </td>
                      <td><input type="text" name="comandoapertura" value="{$value->comandoapertura}" class="form-control" autocomplete="off"/></td>
+                     <td><input type="text" name="comandologo" value="{$value->comandologo}" class="form-control" autocomplete="off"/></td>
                      <td><input type="number" name="num_tickets" value="{$value->num_tickets}" class="form-control" autocomplete="off"/></td>
                      <td class="text-center">
                         {if="!$value->disponible()"}
@@ -273,6 +275,7 @@
                         </label>
                      </td>
                      <td><input type="text" name="comandoapertura" value="{$fsc->terminal->comandoapertura}" class="form-control" autocomplete="off"/></td>
+                     <td><input type="text" name="comandologo" value="{$fsc->terminal->comandologo}" class="form-control" autocomplete="off"/></td>
                      <td><input type="number" name="num_tickets" value="{$fsc->terminal->num_tickets}" class="form-control" autocomplete="off"/></td>
                      <td></td>
                      <td class="text-right">
@@ -313,22 +316,26 @@
                               <th>Impresora</th>
                               <th>Comando de corte</th>
                               <th>Comando de apertura</th>
+                              <th>Comando logo</th>
                            </tr>
                         </thead>
                         <tr>
                            <td>Samsung Bixolon</td>
                            <td>27.105</td>
                            <td>27.112.48</td>
+                           <td>-</td>
                         </tr>
                         <tr>
                            <td>Epson TM-T20II</td>
                            <td>27.109</td>
                            <td>27.112.48.55.121</td>
+                           <td>29.40.76.6.0.48.69.32.32.1.1</td>
                         </tr>
                         <tr>
                            <td>Okipos</td>
                            <td>29.86.66.100</td>
                            <td>27.112.48</td>
+                           <td>-</td>
                         </tr>
                         <tr class="warning">
                            <td colspan="3">
