--- a/view/block/tpv_recambios2.html
+++ b/view/block/tpv_recambios2.html
@@ -278,7 +278,7 @@
                      <div class="form-group">
                         <div class="input-group">
                            <span class="input-group-addon">Cambio</span>
-                           <input type="text" name="tpv_cambio" id="tpv_cambio" class="form-control" disabled="disabled"/>
+                           <input type="text" name="tpv_cambio" id="tpv_cambio" class="form-control" readonly="readonly"/>
                         </div>
                      </div>
                      <div class="form-group">
